Fix Bug 1662510 Add ability to download TBX and TMX files from dashboards
1)Removed the unit from padding right in download-selector.opened .menu rule in the file
 download_selector.css as it anyways 0 (Line 35)
2)Removed the extra space betwen button and colon in download-selector.opened .menu rule
 in the file download_selector.css
3)Formatted the macro download_button in a single line in localization.html
4)Formatted the macro download_button in a single line in team.html

--- a/pontoon/base/static/css/download_selector.css
+++ b/pontoon/base/static/css/download_selector.css
@@ -20,7 +20,7 @@
   text-align: center;
 }
 
-.download-selector .button :hover {
+.download-selector .button:hover {
   background: #272a2f;
 }
   
@@ -32,7 +32,7 @@
 .download-selector.opened .menu {
   display: block;
   top: 32px;
-  right: 0px;
+  right: 0;
   bottom: auto;
   width: 220px;
 }
